# webrtc-platform-app

./: .gitignore  README.md  RUN_APPLICATION.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  env.example  setup.sh  test_frontend_auth.js  test_simple.js  test_url_token.js
backend/: .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  jest.config.js  mikro-orm.config.ts  package-lock.json  package.json
backend/docs/: map-prototype-set-error-fix.md  parallel-testing-guide.md  ultimate-clean-approach.md
backend/migrations/: Migration20240214000000.ts
backend/src/: main.ts
backend/test/: mikro-orm.config.ts  setup.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
livekit-app/: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  TEST_RESULTS.md  jest.config.js  package-lock.json  package.json  tsconfig.json
livekit-app/examples/: client.html
livekit-app/src/: app.ts  index.ts
signaling/: CLUSTERING_GUIDE.md  Cargo.toml  Dockerfile  TESTING_GUIDE.md
signaling/src/: auth.rs  cluster.rs  lib.rs  main.rs  messages.rs  room.rs  server.rs
signaling/tests/: auth_tests.rs  cluster_tests.rs  integration_cluster_tests.rs  messages_tests.rs  room_tests.rs  websocket_server_tests.rs
webrtc-platform/: README.md  docker-compose.yml  env.example  setup.sh
webrtc-platform/backend/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
webrtc-platform/frontend/: env.d.ts  tailwind.config.js
(+76 files in other folders)
