[package]
name = "webrtc-signaling"
version = "1.0.0"
edition = "2021"
description = "WebSocket signaling server for WebRTC with JWT authentication"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.17"
futures-util = "0.3"
serde_json = "1.0"
jsonwebtoken = "8.3"

[lib]
name = "webrtc_signaling"
path = "src/lib.rs"
